--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ python:
   - "3.2"
   - "3.3"
   - "3.4"
+sudo: false
 # command to install dependencies
 install:
   - "python setup.py install"
+script:
+  - "python setup.py test"
